Actions
Bug #10749
closedrpcmod: NULL pointer errors
Start date:
2019-04-12
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
NULL pointer errors:
../../common/rpc/rpc_subr.c: In function 'loopb_u2t': ../../common/rpc/rpc_subr.c:375:16: error: comparison between pointer and integer [-Werror] while (*univp != NULL) { ^~ ../../common/rpc/rpc_subr.c: In function 'rpcbind_getaddr': ../../common/rpc/rpc_subr.c:600:26: error: comparison between pointer and integer [-Werror] if (ua == NULL || *ua == NULL) { ^~ ../../common/rpc/clnt_clts.c: In function 'endpnt_reap_dispatch': ../../common/rpc/clnt_clts.c:1787:18: error: comparison between pointer and integer [-Werror] TQ_NOSLEEP) == NULL) ^~ ../../common/rpc/svc_rdma.c: In function 'svc_rdma_krecv': ../../common/rpc/svc_rdma.c:532:25: error: comparison between pointer and integer [-Werror] if (cllong->u.c_daddr == NULL) { ^~ ../../common/rpc/rdma_subr.c: In function 'clist_deregister': ../../common/rpc/rdma_subr.c:315:22: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] c->c_ssynchandle = NULL; ^ ../../common/rpc/rdma_subr.c:326:22: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] c->c_dsynchandle = NULL; ^ cc1: all warnings being treated as errors
Updated by Electric Monk about 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 25c95769d03db2f91662020bcbc62b7aa59a7642
commit 25c95769d03db2f91662020bcbc62b7aa59a7642 Author: Toomas Soome <tsoome@me.com> Date: 2019-04-19T22:31:26.000Z 10749 rpcmod: NULL pointer errors Reviewed by: Marcel Telka <marcel@telka.sk> Reviewed by: Robert Mustacchi <rm@joyent.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions