usr/src/uts/common/rpc/rdma_subr.c
@@ -234,8 +234,8 @@ clist_zero_len(struct clist *cl)
  */
 void
 clist_add(struct clist **clp, uint32_t xdroff, int len,
-	struct mrc *shandle, caddr_t saddr,
-	struct mrc *dhandle, caddr_t daddr)
+    struct mrc *shandle, caddr_t saddr,
+    struct mrc *dhandle, caddr_t daddr)
 {
 	struct clist *cl;
 
@@ -312,7 +312,7 @@ clist_deregister(CONN *conn, struct clist *cl)
 				    (void *)(uintptr_t)c->c_ssynchandle,
 				    (void *)c->rb_longbuf.rb_private);
 				c->c_smemhandle.mrc_rmr = 0;
-				c->c_ssynchandle = NULL;
+				c->c_ssynchandle = 0;
 			}
 			break;
 		case CLIST_REG_DST:
@@ -323,7 +323,7 @@ clist_deregister(CONN *conn, struct clist *cl)
 				    (void *)(uintptr_t)c->c_dsynchandle,
 				    (void *)c->rb_longbuf.rb_private);
 				c->c_dmemhandle.mrc_rmr = 0;
-				c->c_dsynchandle = NULL;
+				c->c_dsynchandle = 0;
 			}
 			break;
 		default:
